traefik/dashboard/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: kube-system
  name: user-traefik-dashboard
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik-ui2.k3.net`)
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: basic-auth
          namespace: kube-system
